init/ingress-nginx/oauth2-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: oauth2-proxy
  name: oauth2-proxy
  namespace: ingress-nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: oauth2-proxy
  template:
    metadata:
      labels:
        app: oauth2-proxy
    spec:
      containers:
        - args:
            - --provider=github
            - --email-domain=*
            - --whitelist-domain=*.$DOMAIN
            - --upstream=file:///dev/null
            - --http-address=0.0.0.0:4180
          image: quay.io/oauth2-proxy/oauth2-proxy:v7.4.0
          name: oauth2-proxy
          resources:
            limits:
              cpu: 100m
              memory: 64Mi
          ports:
            - containerPort: 4180
              protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: oauth2-proxy
  name: oauth2-proxy
  namespace: ingress-nginx
spec:
  ports:
    - name: http
      port: 4180
      protocol: TCP
      targetPort: 4180
  selector:
    app: oauth2-proxy

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth2-proxy
  namespace: ingress-nginx
  labels:
    app: oauth2-proxy
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - login.$DOMAIN
      secretName: oauth2-ingress-tls
  rules:
    - host: login.$DOMAIN
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: oauth2-proxy
                port:
                  number: 4180
